# api-product

./: Dockerfile  docker-compose.yml  pyproject.toml
app/db/: models.py
